@@ -12,7 +12,6 @@
 - make result label in password checker wrap when text overflows
 - use icons instead of colors in password entry to indicate strength
   (see: epiphany address entry)
-- investigate crashes under fc3 (with dags packages)
 - decode unicode before placing text on clipboard
 - fix unicode encoding/decoding on import/export
   (this also means encoding/decoding the file password)
