@@ -19,6 +19,7 @@ Bugfixes:
 
 Code changes:
 - check for necessary python modules at configure-time
+- improved the applet name and description
 
 
 2005-08-07: Revelation 0.4.4
