@@ -8,6 +8,8 @@ Revelation changelog
 
 	* check for necessary python modules at configure-time
 
+	* improved the applet name and description
+
 2005-08-22  Erik Grinaker <erikg@codepoet.no>
 
 	* added Password Safe 1.x import/export
